# bakom-mcp

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  EXAMPLES.md  README.de.md  README.md  claude_desktop_config.json  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml  publish.yml  release.yml  secret-scan.yml
audits/2026-05-08T044348-Z-bakom-mcp/: audit-meta.json  audit-report.md  profile.yaml  summary.json  verification-results.json
audits/2026-05-08T044348-Z-bakom-mcp/findings/: ARCH-003-not-found-heuristics.md  ARCH-005-secret-scan-gaps.md  ARCH-008-no-prompts.md  ARCH-012-protocol-version-pinning.md  CH-004-cc-by-attribution.md  OBS-001-protocol-vs-execution-errors.md  OBS-002-mask-error-details.md  OBS-003-structured-logging.md  OBS-004-stderr-stdio-discipline.md  OPS-001-test-strategy-markers.md  SDK-001-lifespan-asynccontextmanager.md  SDK-002-pydantic-output-models.md  SDK-003-context-injection.md  SDK-004-cors-mcp-session-id.md  SEC-005-dns-rebinding-prevention.md  SEC-007-container-sandboxing.md  SEC-008-pre-config-consent.md  SEC-016-localhost-binding.md  SEC-021-egress-allowlist.md
audits/2026-05-08T044348-Z-bakom-mcp/raw/: ARCH-001.txt  ARCH-002.txt  ARCH-003.txt  ARCH-004.txt  ARCH-005.txt  ARCH-006.txt  ARCH-007.txt  ARCH-008.txt  ARCH-009.txt  ARCH-011.txt  ARCH-012.txt  CH-004.txt  OBS-001.txt  OBS-002.txt  OBS-003.txt  OBS-004.txt  OPS-001.txt  OPS-002.txt  OPS-003.txt  SCALE-002.txt  SDK-001.txt  SDK-002.txt  SDK-003.txt  SDK-004.txt  SEC-004.txt  SEC-005.txt  SEC-006.txt  SEC-007.txt  SEC-008.txt  SEC-009.txt  SEC-013.txt  SEC-016.txt  SEC-018.txt  SEC-019.txt  SEC-020.txt  SEC-021.txt
audits/2026-05-09T045315-Z-bakom-mcp/: RE-AUDIT-DIFF.md  audit-meta.json  audit-report.md  summary.json  verification-results.json
audits/2026-05-09T045315-Z-bakom-mcp/findings/: ARCH-003-not-found-heuristics.md  ARCH-008-no-prompts.md  ARCH-012-protocol-version-pinning.md  CH-004-cc-by-attribution.md  OBS-003-structured-logging.md  SDK-002-pydantic-output-models.md  SDK-003-context-injection.md  SEC-008-pre-config-consent.md
audits/2026-05-09T045315-Z-bakom-mcp/raw/: ARCH-005.txt  OBS-001.txt  OBS-002.txt  OBS-003.txt  OBS-004.txt  OPS-001.txt  SDK-001.txt  SDK-004.txt  SEC-007.txt  SEC-016.txt  SEC-021.txt
audits/2026-05-09T090037-Z-bakom-mcp/: RE-AUDIT-DIFF.md  audit-meta.json  audit-report.md  summary.json  verification-results.json
audits/2026-05-09T090037-Z-bakom-mcp/raw/: ARCH-003.txt  ARCH-008.txt  ARCH-012.txt  CH-004.txt  OBS-003.txt  SDK-003.txt  SEC-008.txt
src/bakom_mcp/: __init__.py  server.py
tests/: conftest.py  test_20_neue_szenarien.py  test_20_szenarien.py  test_integration.py  test_scenarios_20.py  test_unit.py
